# ChessGPT

./: README.md  config.py  main.py  pyproject.toml
ChessGPT/: chess.py
