[tool.poetry]
name = "chessgpt"
version = "0.1.0"
description = ""
authors = ["Ajay Ratnam <ajratnam.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.10.0"
pyperclip = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
